# pf-grpo

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: spinup_1gpu_workspace.sh
src/pf_grpo/: cli.py  compat.py  core.py
tests/: test_core.py
